<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/firstImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/img_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first"
                android:layout_toRightOf="@id/firstImage"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/secondImage"
                android:layout_marginLeft="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/img_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second"
                android:layout_toRightOf="@id/secondImage"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/thirdImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/img_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third"
                android:layout_toRightOf="@id/thirdImage"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/fourthImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/img_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth"
                android:layout_toRightOf="@id/fourthImage"
                android:textColor="#ffffff"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/fifthImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/img_5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth"
                android:layout_toRightOf="@id/fifthImage"
                android:layout_marginLeft="20dp"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>
